# audio.cpp

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  flake.nix
.devops/: cpu.Dockerfile  cuda.Dockerfile
.github/workflows/: docker.yml  linux-build.yml  mac-build.yml  windows-build.yml
app/cli/: main.cpp  request.cpp  request.h
app/gguf/: main.cpp
app/server/: README.md  config.cpp  config.h  http.cpp  http.h  main.cpp  runtime.cpp  runtime.h
app/workflow/: file_sink.cpp  file_sink.h  workflow.cpp
assets/pipeline/: qwen3_asr_subtitles.json  qwen3_asr_subtitles_batch.json
assets/resources/: sample.wav.emb.txt
docs/: asr.md  depthwise_conv1d_performance.md  gguf.md  module_optimizations.md  nixos.md  omtd.md  outetts_validation.md  qwen3.md  tts.md  usage.md
docs/community_models/: models.md  vietneu_tts.md
docs/maintainers/: loader_and_catalog.md  model_specs.md
docs/models/: omnivoice.md
examples/model_spec_demo/: README.md  index.html  model_spec_download_demo.cpp
examples/model_spec_demo/specs/: toy_qwen3_asr.json
include/engine/community_models/vietneu_tts/: assets.h  loader.h  prompt_tts_voice_clone.h  session.h  speaker_encoder.h  talker.h  tokenizer_speech_decoder.h  tokenizer_speech_encoder.h  tokenizer_text.h  types.h
include/engine/framework/audio/: dsp.h  wav_reader.h
include/engine/framework/core/: backend.h
include/engine/framework/modules/: attention_modules.h  conv_modules.h  norm_modules.h  packed_linear_weights.h  positional_modules.h  speaker_encoders.h  speech_encoders.h  structural_modules.h  transformer_modules.h  vocoders.h
include/engine/framework/runtime/: kv_cache.h
include/engine/framework/sampling/: torch_random.h
include/engine/framework/text/: subtitle.h
include/engine/framework/tokenizers/: llama_bpe.h
include/engine/models/ace_step/: dit_weights_runtime.h
include/engine/models/citrinet_asr/: assets.h
include/engine/models/fish_audio/: ar.h  assets.h  codec.h  generator.h  loader.h  prompt_builder.h  session.h  tokenizer_text.h  types.h
include/engine/models/higgs_audio_stt/: frontend_whisper.h
include/engine/models/higgs_audio_tts/: ar.h  assets.h  codebooks.h  codec.h  generator.h  loader.h  sampler.h  session.h  tokenizer_text.h
include/engine/models/index_tts2/: qwen_emotion.h  style_encoder.h  vocoder.h
include/engine/models/miocodec/: audio_pipeline.h
include/engine/models/omnivoice/: session.h
include/engine/models/qwen3_asr/: frontend_whisper.h  session.h
include/engine/models/seed_vc/: content_features.h  whisper_content.h
include/engine/models/vevo2/: assets.h  session.h
model_specs/: citrinet_asr.json  fish_audio.json  higgs_audio_tts.json  vietneu_tts.json
src/community_models/common/: constant_tensor_cache.h
src/community_models/outetts/: llama.cpp
src/community_models/vietneu_tts/: assets.cpp  loader.cpp  prompt_tts_voice_clone.cpp  session.cpp  speaker_encoder.cpp  talker.cpp  tokenizer_speech_decoder.cpp  tokenizer_speech_encoder.cpp  tokenizer_text.cpp
src/framework/assets/: model_package.cpp
src/framework/audio/: dsp.cpp  wav_reader.cpp
src/framework/core/: backend.cpp
src/framework/model_spec/: schema.cpp
src/framework/modules/: campplus_encoder.cpp  conv_modules.cpp  hift_vocoder.cpp  hubert_encoder.cpp  module_internal.h  norm_modules.cpp  packed_linear_weights.cpp  positional_modules.cpp  structural_modules.cpp
src/framework/modules/attention/: attention_internal.h  feed_forward.cpp  qwen_causal_decoder.cpp  qwen_decoder.cpp
src/framework/modules/vocoders/: hift_vocoder.cpp  (+1 more)
src/framework/runtime/: kv_cache.cpp  registry.cpp
src/framework/sampling/: torch_random.cpp  torch_random_cuda_runtime.cu  torch_random_cuda_runtime.h
src/framework/text/: chunking.cpp  subtitle.cpp
src/framework/tokenizers/: llama_bpe.cpp
src/models/ace_step/: cover_tokenizer.cpp  detokenizer.cpp  planner.cpp
src/models/chatterbox/: campplus_encoder_impl.cpp  hift_vocoder_impl.cpp
src/models/citrinet_asr/: assets.cpp  runtime.cpp
src/models/fish_audio/: ar.cpp  assets.cpp  codec.cpp  generator.cpp  loader.cpp  prompt_builder.cpp  session.cpp  tokenizer_text.cpp
src/models/higgs_audio_stt/: frontend_whisper.cpp  text_decoder.cpp
src/models/higgs_audio_tts/: ar.cpp  assets.cpp  codebooks.cpp  codec.cpp  generator.cpp  loader.cpp  sampler.cpp  session.cpp  tokenizer_text.cpp
src/models/miocodec/: session.cpp
src/models/miotts/: session.cpp
src/models/omnivoice/: loader.cpp  session.cpp
src/models/outetts/: llama.cpp
src/models/qwen3_asr/: frontend_whisper.cpp  session.cpp  thinker.cpp
src/models/qwen3_forced_aligner/: processor.cpp
src/models/qwen3_tts/: talker.cpp  tokenizer_speech_decoder.cpp  tokenizer_speech_encoder.cpp
src/models/seed_vc/: astral_quantizer.cpp  length_regulator.cpp  session.cpp  whisper_content.cpp
src/models/vevo2/: session.cpp
src/models/vibevoice/: session.cpp
src/models/vibevoice_asr/: text_decoder.cpp
src/models/voxtral_realtime/: audio_encoder.cpp  text_decoder.cpp
tests/: test-omtd.cpp  warmbench.py
tests/higgs_audio_tts/: README.md  compare_warmbench_results.py  higgs_audio_tts_cuda_bench_cases.json  higgs_audio_tts_cuda_mixed_cases.json  higgs_audio_tts_cuda_perf_cases.json  higgs_audio_tts_python_warm_bench.py  higgs_audio_tts_warm_bench.cpp  higgs_audio_tts_warm_bench_cases.json  run_cuda_performance.ps1
tests/miocodec/: miocodec_wavlm_parity.cpp
tests/unittests/: test_asr_standalone_gguf.cpp  test_citrinet_tokenizer_decode.cpp  test_conv_transpose_fast_path.cpp  test_qwen_decoder_packed_projections.cpp  test_server_multipart.cpp  test_subtitle_formatter.cpp
tests/vevo2/: whisper_embedding_parity.cpp
tools/: check_loader_catalog_sync.py  model_manager.py
tools/audiocpp_cli/: audiocpp_cli_longform_tts_clone_cases.json  audiocpp_cli_path_cases.json  compare_audiocpp_cli_path_results.py  run_audiocpp_cli_path_tests.py
tools/omtd/: CMakeLists.txt  README.md  omtd.cpp  omtd.h
tools/streaming/: measure_tts_streaming_client.py
webui/: README.md  README.zh.md  webui.py
(+29 files in other folders)
