cmake_minimum_required(VERSION 3.20)

project(AudioCpp LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if (NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Build type" FORCE)
endif()

set(ENGINE_DEFAULT_ENABLE_CUDA OFF)
set(ENGINE_DEFAULT_ENABLE_VULKAN OFF)
set(ENGINE_DEFAULT_ENABLE_METAL OFF)
set(ENGINE_DEFAULT_ENABLE_LLAMAFILE ON)
set(ENGINE_DEFAULT_ENABLE_CUDA_GRAPHS ON)
if (APPLE)
    set(ENGINE_DEFAULT_ENABLE_METAL ON)
endif()
if (DEFINED GGML_CUDA)
    set(ENGINE_DEFAULT_ENABLE_CUDA ${GGML_CUDA})
endif()
if (DEFINED GGML_VULKAN)
    set(ENGINE_DEFAULT_ENABLE_VULKAN ${GGML_VULKAN})
endif()
if (DEFINED GGML_METAL)
    set(ENGINE_DEFAULT_ENABLE_METAL ${GGML_METAL})
endif()
if (DEFINED GGML_LLAMAFILE)
    set(ENGINE_DEFAULT_ENABLE_LLAMAFILE ${GGML_LLAMAFILE})
endif()
if (DEFINED GGML_CUDA_GRAPHS)
    set(ENGINE_DEFAULT_ENABLE_CUDA_GRAPHS ${GGML_CUDA_GRAPHS})
endif()

option(ENGINE_ENABLE_CUDA "Build ggml with CUDA backend support" ${ENGINE_DEFAULT_ENABLE_CUDA})
option(ENGINE_ENABLE_VULKAN "Build ggml with Vulkan backend support" ${ENGINE_DEFAULT_ENABLE_VULKAN})
option(ENGINE_ENABLE_METAL "Build ggml with Metal backend support" ${ENGINE_DEFAULT_ENABLE_METAL})
option(ENGINE_ENABLE_LLAMAFILE "Build ggml with llamafile SGEMM support" ${ENGINE_DEFAULT_ENABLE_LLAMAFILE})
option(ENGINE_ENABLE_CUDA_GRAPHS "Enable ggml CUDA graphs support" ${ENGINE_DEFAULT_ENABLE_CUDA_GRAPHS})
option(ENGINE_ENABLE_OPENMP "Build host code with OpenMP support" ON)
option(ENGINE_BUILD_EXAMPLES "Build example binaries" OFF)
option(ENGINE_BUILD_TESTS "Build framework unit tests" OFF)
option(ENGINE_BUILD_WARMBENCH "Build warmbench helper binaries" OFF)

if (ENGINE_ENABLE_CUDA)
    enable_language(CUDA)
    find_package(CUDAToolkit REQUIRED)
endif()
if (ENGINE_ENABLE_OPENMP)
    find_package(OpenMP REQUIRED COMPONENTS CXX)
endif()

set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static libraries" FORCE)
set(GGML_BUILD_EXAMPLES OFF CACHE BOOL "Do not build upstream examples" FORCE)
set(GGML_BUILD_TESTS OFF CACHE BOOL "Do not build upstream tests" FORCE)
set(GGML_ALL_WARNINGS OFF CACHE BOOL "Keep upstream warnings quiet in this sample" FORCE)
set(GGML_CCACHE OFF CACHE BOOL "Do not probe for ccache in this local setup" FORCE)
set(GGML_CUDA ${ENGINE_ENABLE_CUDA} CACHE BOOL "Build ggml with CUDA backend support" FORCE)
set(GGML_VULKAN ${ENGINE_ENABLE_VULKAN} CACHE BOOL "Build ggml with Vulkan backend support" FORCE)
set(GGML_METAL ${ENGINE_ENABLE_METAL} CACHE BOOL "Build ggml with Metal backend support" FORCE)
set(GGML_LLAMAFILE ${ENGINE_ENABLE_LLAMAFILE} CACHE BOOL "Build ggml with llamafile SGEMM support" FORCE)
set(GGML_CUDA_GRAPHS ${ENGINE_ENABLE_CUDA_GRAPHS} CACHE BOOL "Enable ggml CUDA graphs support" FORCE)

set(SPM_ENABLE_SHARED OFF CACHE BOOL "Build sentencepiece shared libs" FORCE)
set(SPM_BUILD_TEST OFF CACHE BOOL "Do not build sentencepiece tests" FORCE)
set(SPM_ENABLE_TCMALLOC OFF CACHE BOOL "Do not probe for tcmalloc" FORCE)

add_subdirectory(external/ggml)
add_subdirectory(external/sentencepiece EXCLUDE_FROM_ALL)

add_compile_options(
    $<$<COMPILE_LANG_AND_ID:CXX,GNU,Clang>:-Wall>
    $<$<COMPILE_LANG_AND_ID:CXX,GNU,Clang>:-Wextra>
    $<$<COMPILE_LANG_AND_ID:CXX,GNU,Clang>:-Wpedantic>
    $<$<COMPILE_LANG_AND_ID:CXX,GNU,Clang>:-pedantic-errors>
    $<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->
)

add_library(engine_runtime STATIC
    src/framework/assets/resource_bundle.cpp
    src/framework/assets/tensor_source.cpp
    src/framework/assets/torch_bin.cpp
    src/framework/core/module.cpp
    src/framework/core/backend.cpp
    src/framework/core/deferred_tensor_writer.cpp
    src/framework/core/execution_context.cpp
    src/framework/runtime/registry.cpp
    src/framework/runtime/model.cpp
    src/framework/runtime/session.cpp
    src/framework/runtime/artifacts.cpp
    src/framework/runtime/cache.cpp
    src/framework/runtime/graph_executor.cpp
    src/framework/runtime/graph_optimizer.cpp
    src/framework/runtime/host_ops.cpp
    src/framework/runtime/kv_cache.cpp
    src/framework/runtime/options.cpp
    src/framework/runtime/session_base.cpp
    src/framework/runtime/workspace.cpp
    src/framework/io/filesystem.cpp
    src/framework/io/config.cpp
    src/framework/io/json.cpp
    src/framework/io/text.cpp
    src/framework/text/chunking.cpp
    src/framework/io/yaml.cpp
    src/framework/io/binary.cpp
    src/framework/io/safetensors.cpp
    src/framework/debug/trace.cpp
    src/framework/debug/profiler.cpp
    src/framework/decoders/tdt_decoder_runner.cpp
    src/framework/decoders/tdt_decoder_greedy_customized.cpp
    src/framework/decoders/tdt_decoder_greedy_duration_loop.cpp
    src/framework/decoders/tdt_decoder_greedy_separate_heads.cpp
    src/framework/modules/linear_module.cpp
    src/framework/modules/primitive_modules.cpp
    src/framework/modules/activation_modules.cpp
    src/framework/modules/norm_modules.cpp
    src/framework/modules/lookup_modules.cpp
    src/framework/modules/structural_modules.cpp
    src/framework/modules/conv_modules.cpp
    src/framework/modules/whisper_embedding.cpp
    src/framework/modules/campplus_encoder.cpp
    src/framework/modules/bigvgan_vocoder.cpp
    src/framework/modules/hift_vocoder.cpp
    src/framework/modules/hubert_encoder.cpp
    src/framework/modules/wavlm_encoder.cpp
    src/framework/modules/optimizations/fast_conv_modules.cpp
    src/framework/modules/recurrent_modules.cpp
    src/framework/modules/streaming_conv_modules.cpp
    src/framework/modules/attention/positional_encoding.cpp
    src/framework/modules/attention/feed_forward.cpp
    src/framework/modules/attention/self_attention.cpp
    src/framework/modules/attention/longformer_attention.cpp
    src/framework/modules/attention/longformer_attention_gpu.cpp
    src/framework/modules/attention/common_relative_attention.cpp
    src/framework/modules/attention/relative_attention.cpp
    src/framework/modules/attention/qwen_decoder.cpp
    src/framework/modules/attention/cross_attention.cpp
    src/framework/modules/attention/transformer_blocks.cpp
    src/framework/modules/conditioning_modules.cpp
    src/framework/modules/conformer_modules.cpp
    src/framework/modules/predictor_modules.cpp
    src/framework/modules/positional_modules.cpp
    src/framework/modules/text_encoders/t5_base_encoder.cpp
    src/framework/modules/text_encoders/t5_gemma_encoder.cpp
    src/framework/modules/optimizations/fast_kv_modules.cpp
    src/framework/tokenizers/hf_tokenizer_json.cpp
    src/framework/tokenizers/llama_bpe.cpp
    external/llama_tokenizer/bpe-core.cpp
    external/llama_tokenizer/unicode.cpp
    external/llama_tokenizer/unicode-data.cpp
    src/framework/tokenizers/sentencepiece.cpp
    src/framework/audio/fft.cpp
    src/framework/audio/activity.cpp
    src/framework/audio/chunking.cpp
    src/framework/audio/conversion.cpp
    src/framework/audio/deepfilternet2.cpp
    src/framework/audio/dsp.cpp
    src/framework/audio/flashsr.cpp
    src/framework/audio/istft_graph.cpp
    src/framework/audio/mixing.cpp
    src/framework/audio/resampling.cpp
    src/framework/audio/output.cpp
    src/framework/audio/rnnoise.cpp
    src/framework/audio/utility_api.cpp
    src/framework/audio/waveform_ops.cpp
    src/framework/audio/wav_reader.cpp
    src/framework/audio/wav_writer.cpp
    src/framework/audio/zipenhancer.cpp
    src/framework/modules/ecapa_tdnn_runtime.cpp
    src/framework/modules/titanet_runtime.cpp
    src/framework/codecs/neural_audio.cpp
    src/framework/sampling/decode_modules.cpp
    src/framework/sampling/diffusion_math.cpp
    src/framework/sampling/noise.cpp
    src/framework/sampling/torch_random.cpp
    src/models/roformer/assets.cpp
    src/models/roformer/runtime.cpp
    src/models/roformer/session.cpp
    src/models/demucs/assets.cpp
    src/models/demucs/frontend.cpp
    src/models/demucs/pipeline.cpp
    src/models/demucs/postprocess.cpp
    src/models/demucs/session.cpp
    src/models/omnivoice/assets.cpp
    src/models/omnivoice/tokenizer_text.cpp
    src/models/omnivoice/audio_tokenizer.cpp
    src/models/omnivoice/prompt_builder.cpp
    src/models/omnivoice/generator.cpp
    src/models/omnivoice/postprocess.cpp
    src/models/omnivoice/session.cpp
    src/models/omnivoice/loader.cpp
    src/models/pocket_tts/assets.cpp
    src/models/pocket_tts/acoustic_model.cpp
    src/models/pocket_tts/audio_decoder.cpp
    src/models/pocket_tts/flow_lm.cpp
    src/models/pocket_tts/mimi_decoder.cpp
    src/models/pocket_tts/mimi_encoder.cpp
    src/models/pocket_tts/text_conditioner.cpp
    src/models/pocket_tts/voice_conditioner.cpp
    src/models/pocket_tts/loader.cpp
    src/models/pocket_tts/session.cpp
    src/models/miocodec/assets.cpp
    src/models/miocodec/weights.cpp
    src/models/miocodec/audio_pipeline.cpp
    src/models/miocodec/graph_ops.cpp
    src/models/miocodec/graphs.cpp
    src/models/miocodec/session.cpp
    src/models/miocodec/loader.cpp
    src/models/miotts/assets.cpp
    src/models/miotts/tokenizer.cpp
    src/models/miotts/causal_lm.cpp
    src/models/miotts/session.cpp
    src/models/miotts/loader.cpp
    src/models/voxcpm2/assets.cpp
    src/models/voxcpm2/audiovae.cpp
    src/models/voxcpm2/generator.cpp
    src/models/voxcpm2/loader.cpp
    src/models/voxcpm2/minicpm.cpp
    src/models/voxcpm2/session.cpp
    src/models/voxcpm2/tokenizer_text.cpp
    src/models/vibevoice/assets.cpp
    src/models/vibevoice/connector.cpp
    src/models/vibevoice/decoder.cpp
    src/models/vibevoice/diffusion_head.cpp
    src/models/vibevoice/diffusion_sampler.cpp
    src/models/vibevoice/generator.cpp
    src/models/vibevoice/loader.cpp
    src/models/vibevoice/lora.cpp
    src/models/vibevoice/scheduler.cpp
    src/models/vibevoice/session.cpp
    src/models/vibevoice/tokenizer_audio.cpp
    src/models/vibevoice/tokenizer_text.cpp
    src/models/heartmula/assets.cpp
    src/models/heartmula/codec.cpp
    src/models/heartmula/generator.cpp
    src/models/heartmula/loader.cpp
    src/models/heartmula/mula.cpp
    src/models/heartmula/session.cpp
    src/models/heartmula/tokenizer_text.cpp
    src/models/qwen3_tts/assets.cpp
    src/models/qwen3_tts/tokenizer_text.cpp
    src/models/qwen3_tts/tokenizer_speech_encoder.cpp
    src/models/qwen3_tts/tokenizer_speech_decoder.cpp
    src/models/qwen3_tts/speaker_encoder.cpp
    src/models/qwen3_tts/talker.cpp
    src/models/qwen3_tts/prompt_tts_voice_clone.cpp
    src/models/qwen3_tts/prompt_tts_voice_design.cpp
    src/models/qwen3_tts/prompt_tts_custom_voice.cpp
    src/models/qwen3_tts/session.cpp
    src/models/qwen3_tts/loader.cpp
    src/models/qwen3_asr/assets.cpp
    src/models/qwen3_asr/tokenizer_text.cpp
    src/models/qwen3_asr/frontend_whisper.cpp
    src/models/qwen3_asr/audio_encoder.cpp
    src/models/qwen3_asr/thinker.cpp
    src/models/qwen3_asr/prompt_asr.cpp
    src/models/qwen3_asr/postprocess.cpp
    src/models/qwen3_asr/session.cpp
    src/models/qwen3_asr/loader.cpp
    src/models/vevo2/ar.cpp
    src/models/vevo2/assets.cpp
    src/models/vevo2/components.cpp
    src/models/vevo2/fm.cpp
    src/models/vevo2/prompt_builder.cpp
    src/models/vevo2/session.cpp
    src/models/vevo2/tokenizer_ar.cpp
    src/models/vevo2/vocoder.cpp
    src/models/vevo2/loader.cpp
    src/models/seed_vc/assets.cpp
    src/models/seed_vc/weight_bundle.cpp
    src/models/seed_vc/audio_features.cpp
    src/models/seed_vc/length_regulator.cpp
    src/models/seed_vc/astral_quantizer.cpp
    src/models/seed_vc/content_features.cpp
    src/models/seed_vc/rmvpe.cpp
    src/models/seed_vc/whisper_content.cpp
    src/models/seed_vc/v1_cfm.cpp
    src/models/seed_vc/v2_cfm.cpp
    src/models/seed_vc/session.cpp
    src/models/seed_vc/loader.cpp
    src/models/chatterbox/assets.cpp
    src/models/chatterbox/campplus_encoder_impl.cpp
    src/models/chatterbox/audio_features.cpp
    src/models/chatterbox/audio_processing.cpp
    src/models/chatterbox/component_weights.cpp
    src/models/chatterbox/conditionals.cpp
    src/models/chatterbox/hift_vocoder_impl.cpp
    src/models/chatterbox/loader.cpp
    src/models/chatterbox/s3_tokenizer_impl.cpp
    src/models/chatterbox/s3gen_flow.cpp
    src/models/chatterbox/s3gen_inference.cpp
    src/models/chatterbox/session.cpp
    src/models/chatterbox/t3_component.cpp
    src/models/chatterbox/t3_weights.cpp
    src/models/chatterbox/text_tokenizer.cpp
    src/models/chatterbox/tts.cpp
    src/models/chatterbox/voice_encoder_impl.cpp
    src/models/qwen3_forced_aligner/processor.cpp
    src/models/qwen3_forced_aligner/session.cpp
    src/models/qwen3_forced_aligner/loader.cpp
    src/models/ace_step/assets.cpp
    src/models/ace_step/audio_preprocess.cpp
    src/models/ace_step/condition_encoder.cpp
    src/models/ace_step/cover_tokenizer.cpp
    src/models/ace_step/detokenizer.cpp
    src/models/ace_step/diffusion.cpp
    src/models/ace_step/dit_weights_runtime.cpp
    src/models/ace_step/loader.cpp
    src/models/ace_step/planner.cpp
    src/models/ace_step/pre_dit.cpp
    src/models/ace_step/prompt_builder.cpp
    src/models/ace_step/repaint.cpp
    src/models/ace_step/request_parser.cpp
    src/models/ace_step/session.cpp
    src/models/ace_step/task_route.cpp
    src/models/ace_step/text_encoder.cpp
    src/models/ace_step/tokenizer_text.cpp
    src/models/ace_step/vae_decoder.cpp
    src/models/ace_step/vae_encoder.cpp
    src/models/stable_audio/assets.cpp
    src/models/stable_audio/conditioner.cpp
    src/models/stable_audio/conditioner_runtime.cpp
    src/models/stable_audio/foundation/conditioner.cpp
    src/models/stable_audio/foundation/oobleck_autoencoder.cpp
    src/models/stable_audio/foundation/rf_dit.cpp
    src/models/stable_audio/foundation/session.cpp
    src/models/stable_audio/loader.cpp
    src/models/stable_audio/request.cpp
    src/models/stable_audio/rf_dit.cpp
    src/models/stable_audio/same_autoencoder.cpp
    src/models/stable_audio/sampler.cpp
    src/models/stable_audio/session.cpp
    src/models/stable_audio/t5gemma.cpp
    src/models/sortformer_diar/assets.cpp
    src/models/sortformer_diar/frontend.cpp
    src/models/sortformer_diar/graph.cpp
    src/models/sortformer_diar/modules.cpp
    src/models/sortformer_diar/postprocess.cpp
    src/models/sortformer_diar/loader.cpp
    src/models/sortformer_diar/session.cpp
    src/models/silero_vad/assets.cpp
    src/models/silero_vad/runtime.cpp
    src/models/silero_vad/session.cpp
    src/models/citrinet_asr/assets.cpp
    src/models/citrinet_asr/runtime.cpp
    src/models/citrinet_asr/session.cpp
    src/models/marblenet_vad/assets.cpp
    src/models/marblenet_vad/runtime.cpp
    src/models/marblenet_vad/session.cpp
)

add_library(cjson_vendor STATIC
    external/cJSON/cJSON.c
)

target_include_directories(cjson_vendor PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/external/cJSON
)

add_library(yaml_vendor STATIC
    external/libyaml/src/api.c
    external/libyaml/src/reader.c
    external/libyaml/src/scanner.c
    external/libyaml/src/parser.c
    external/libyaml/src/loader.c
)

target_include_directories(yaml_vendor PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/external/libyaml/include
)

target_compile_definitions(yaml_vendor PUBLIC
    _POSIX_C_SOURCE=200809L
    YAML_DECLARE_STATIC=1
    YAML_VERSION_MAJOR=0
    YAML_VERSION_MINOR=2
    YAML_VERSION_PATCH=5
    YAML_VERSION_STRING=\"0.2.5\"
)

target_include_directories(engine_runtime PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_include_directories(engine_runtime PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/external/sentencepiece/src
    ${CMAKE_CURRENT_SOURCE_DIR}/external/llama_tokenizer
)

target_link_libraries(engine_runtime PUBLIC ggml)
target_link_libraries(engine_runtime PRIVATE sentencepiece cjson_vendor yaml_vendor)
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(engine_runtime PRIVATE OpenMP::OpenMP_CXX)
endif()

if (ENGINE_ENABLE_CUDA)
    target_sources(engine_runtime PRIVATE
        src/framework/audio/istft_cuda_runtime.cu
        src/framework/sampling/torch_random_cuda_runtime.cu
    )
    set_source_files_properties(
        src/framework/audio/istft_cuda_runtime.cu
        src/framework/sampling/torch_random_cuda_runtime.cu
        PROPERTIES
        CUDA_STANDARD 17
        CUDA_STANDARD_REQUIRED ON
    )
    if (CMAKE_CUDA_ARCHITECTURES)
        set_target_properties(engine_runtime PROPERTIES CUDA_ARCHITECTURES "${CMAKE_CUDA_ARCHITECTURES}")
    else()
        set_target_properties(engine_runtime PROPERTIES CUDA_ARCHITECTURES native)
    endif()
    target_compile_definitions(engine_runtime PUBLIC ENGINE_HAS_CUDA_ISTFT=1 ENGINE_HAS_CUDA_TORCH_RANDOM=1)
    target_link_libraries(engine_runtime PRIVATE CUDA::cudart CUDA::cufft)
endif()

add_executable(audiocpp_cli
    app/cli/main.cpp
    app/cli/args.cpp
    app/cli/batch.cpp
    app/cli/request.cpp
    app/workflow/execution.cpp
    app/workflow/file_sink.cpp
    app/workflow/pipeline.cpp
    app/workflow/workflow.cpp
)

target_link_libraries(audiocpp_cli PRIVATE engine_runtime ggml)
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(audiocpp_cli PRIVATE OpenMP::OpenMP_CXX)
endif()

add_executable(audiocpp_server
    app/server/main.cpp
    app/server/config.cpp
    app/server/http.cpp
    app/server/multipart.cpp
    app/server/runtime.cpp
    app/cli/args.cpp
    app/cli/request.cpp
)

target_link_libraries(audiocpp_server PRIVATE engine_runtime ggml)
if (WIN32)
    target_link_libraries(audiocpp_server PRIVATE ws2_32)
endif()
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(audiocpp_server PRIVATE OpenMP::OpenMP_CXX)
endif()

add_executable(model_perf
    tests/perf/model_perf.cpp
    app/cli/args.cpp
    app/cli/request.cpp
)
target_link_libraries(model_perf PRIVATE engine_runtime ggml)
target_include_directories(model_perf PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(model_perf PRIVATE OpenMP::OpenMP_CXX)
endif()

add_executable(miocodec_wavlm_parity
    tests/miocodec/miocodec_wavlm_parity.cpp
)

target_link_libraries(miocodec_wavlm_parity PRIVATE engine_runtime ggml)

add_executable(torch_bin_parity
    tests/vibevoice/torch_bin_parity.cpp
)

target_link_libraries(torch_bin_parity PRIVATE engine_runtime ggml)
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(torch_bin_parity PRIVATE OpenMP::OpenMP_CXX)
endif()

add_executable(vibevoice_finetune_overlay_check
    tests/vibevoice/finetune_overlay_check.cpp
)

target_link_libraries(vibevoice_finetune_overlay_check PRIVATE engine_runtime ggml)
if (ENGINE_ENABLE_OPENMP)
    target_link_libraries(vibevoice_finetune_overlay_check PRIVATE OpenMP::OpenMP_CXX)
endif()

if (ENGINE_BUILD_WARMBENCH)
    function(add_engine_warmbench target_name source_file)
        add_executable(${target_name}
            ${source_file}
        )
        target_link_libraries(${target_name} PRIVATE engine_runtime ggml)
        if (ENGINE_ENABLE_OPENMP)
            target_link_libraries(${target_name} PRIVATE OpenMP::OpenMP_CXX)
        endif()
    endfunction()

    add_engine_warmbench(chatterbox_warm_bench tests/chatterbox/chatterbox_warm_bench.cpp)
    add_engine_warmbench(citrinet_asr_warm_bench tests/citrinet_asr/citrinet_asr_warm_bench.cpp)
    add_engine_warmbench(marblenet_vad_warm_bench tests/marblenet_vad/marblenet_vad_warm_bench.cpp)
    add_engine_warmbench(miocodec_warm_bench tests/miocodec/miocodec_warm_bench.cpp)
    add_engine_warmbench(omnivoice_warm_bench tests/omnivoice/omnivoice_warm_bench.cpp)
    add_engine_warmbench(pocket_tts_warm_bench tests/pocket_tts/pocket_tts_warm_bench.cpp)
    add_engine_warmbench(qwen3_asr_warm_bench tests/qwen3_asr/qwen3_asr_warm_bench.cpp)
    add_engine_warmbench(qwen3_forced_aligner_warm_bench tests/qwen3_forced_aligner/qwen3_forced_aligner_warm_bench.cpp)
    add_engine_warmbench(qwen3_tts_warm_bench tests/qwen3_tts/qwen3_tts_warm_bench.cpp)
    add_engine_warmbench(seed_vc_warm_bench tests/seed_vc/seed_vc_warm_bench.cpp)
    add_engine_warmbench(silero_vad_warm_bench tests/silero_vad/silero_vad_warm_bench.cpp)
    add_engine_warmbench(sortformer_diar_warm_bench tests/sortformer_diar/sortformer_diar_warm_bench.cpp)
    add_engine_warmbench(vevo2_warm_bench tests/vevo2/vevo2_warm_bench.cpp)
    add_engine_warmbench(voxcpm2_warm_bench tests/voxcpm2/voxcpm2_warm_bench.cpp)
endif()

if (ENGINE_BUILD_TESTS)
    enable_testing()

    set(ENGINE_UNITTEST_ASSET_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/tests/unittests/assets")

    function(add_engine_unittest target source)
        add_executable(${target} ${source})
        target_link_libraries(${target} PRIVATE engine_runtime ggml)
    endfunction()

    add_executable(sentencepiece_tokenizer1_test
        tests/unittests/test_sentencepiece_tokenizer1.cpp
    )

    target_link_libraries(sentencepiece_tokenizer1_test PRIVATE engine_runtime ggml)
    target_compile_definitions(sentencepiece_tokenizer1_test PRIVATE
        ENGINE_TEST_ASSET_ROOT="${ENGINE_UNITTEST_ASSET_ROOT}"
    )

    add_test(
        NAME sentencepiece_tokenizer1_test
        COMMAND sentencepiece_tokenizer1_test
    )

    add_engine_unittest(audio_dsp_test tests/unittests/test_audio_dsp.cpp)

    add_test(
        NAME audio_dsp_test
        COMMAND audio_dsp_test
    )

    add_engine_unittest(rnnoise_utility_test tests/unittests/test_rnnoise_utility.cpp)
    target_compile_definitions(rnnoise_utility_test PRIVATE
        ENGINE_REPO_ROOT="${CMAKE_CURRENT_SOURCE_DIR}"
        ENGINE_TEST_ASSET_ROOT="${ENGINE_UNITTEST_ASSET_ROOT}"
    )

    add_test(
        NAME rnnoise_utility_test
        COMMAND rnnoise_utility_test
    )

    add_engine_unittest(flashsr_utility_test tests/unittests/test_flashsr_utility.cpp)
    target_compile_definitions(flashsr_utility_test PRIVATE
        ENGINE_REPO_ROOT="${CMAKE_CURRENT_SOURCE_DIR}"
        ENGINE_TEST_ASSET_ROOT="${ENGINE_UNITTEST_ASSET_ROOT}"
    )

    add_test(
        NAME flashsr_utility_test
        COMMAND flashsr_utility_test
    )

    add_engine_unittest(zipenhancer_utility_test tests/unittests/test_zipenhancer_utility.cpp)
    target_compile_definitions(zipenhancer_utility_test PRIVATE
        ENGINE_REPO_ROOT="${CMAKE_CURRENT_SOURCE_DIR}"
        ENGINE_TEST_ASSET_ROOT="${ENGINE_UNITTEST_ASSET_ROOT}"
    )

    add_test(
        NAME zipenhancer_utility_test
        COMMAND zipenhancer_utility_test
    )

    add_engine_unittest(audio_utility_api_test tests/unittests/test_audio_utility_api.cpp)
    target_compile_definitions(audio_utility_api_test PRIVATE
        ENGINE_REPO_ROOT="${CMAKE_CURRENT_SOURCE_DIR}"
    )

    add_test(
        NAME audio_utility_api_test
        COMMAND audio_utility_api_test
    )

    add_engine_unittest(torch_random_test tests/unittests/test_torch_random.cpp)

    add_test(
        NAME torch_random_test
        COMMAND torch_random_test
    )

    add_engine_unittest(diffusion_math_test tests/unittests/test_diffusion_math.cpp)

    add_test(
        NAME diffusion_math_test
        COMMAND diffusion_math_test
    )

    add_engine_unittest(encoder_module_test tests/unittests/test_encoder_modules.cpp)

    add_test(
        NAME encoder_module_test
        COMMAND encoder_module_test
    )

    add_engine_unittest(conv_transpose_fast_path_test tests/unittests/test_conv_transpose_fast_path.cpp)

    add_test(
        NAME conv_transpose_fast_path_test
        COMMAND conv_transpose_fast_path_test
    )

    add_executable(server_multipart_test
        tests/unittests/test_server_multipart.cpp
        app/server/multipart.cpp
    )
    target_include_directories(server_multipart_test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/app/server)

    add_test(
        NAME server_multipart_test
        COMMAND server_multipart_test
    )
endif()

if (ENGINE_BUILD_EXAMPLES)
    add_executable(ggml_simple_inference
        examples/ggml_simple_inference.cpp
    )

    target_link_libraries(ggml_simple_inference PRIVATE ggml)
endif()
